Adding Fog And Glitchy Points

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Game</title>
   </head>
   <body>
+    <div style = "text-align:center;">
     <canvas id="Gamewindow" width="200" height="100" style="border:1px solid #000000;"></canvas> 
 	<script src="Game.js"></script>
     <link rel="stylesheet" href="Style.css">
