add josh lib switch to modules add package.json add 'npm run dev'

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <div style = "text-align:center;">
-    <canvas id="Gamewindow" width="200" height="100" style="border:1px solid #000000;"></canvas> 
-	<script src="Game.js"></script>
+    <canvas id="Gamewindow" width="200" height="100" style="border:1px solid #000000;"></canvas>
     <link rel="stylesheet" href="Style.css">
-
+    <script type="module">
+      import {start_game} from "./Game.js"
+      console.log("starting the game")
+      start_game()
+    </script>
   </body>
 </html>
